Bug 70309 - [EFL][WK2] Fix compilation error by include WebErrors.h file.
Summary: [EFL][WK2] Fix compilation error by include WebErrors.h file.
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKit2 (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Nobody
URL:
Keywords:
Depends on:
Blocks: 61838
  Show dependency treegraph
 
Reported: 2011-10-17 23:32 PDT by Tomasz Morawski
Modified: 2011-10-18 04:51 PDT (History)
2 users (show)

See Also:


Attachments
Patch (1.15 KB, patch)
2011-10-17 23:36 PDT, Tomasz Morawski
no flags Details | Formatted Diff | Diff
Patch 2 (1.14 KB, patch)
2011-10-18 00:46 PDT, Tomasz Morawski
no flags Details | Formatted Diff | Diff
Patch 3 (1.14 KB, patch)
2011-10-18 01:17 PDT, Tomasz Morawski
no flags Details | Formatted Diff | Diff
Patch 4 (1.12 KB, patch)
2011-10-18 01:26 PDT, Tomasz Morawski
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Tomasz Morawski 2011-10-17 23:32:44 PDT
Added a header file to fix compilation error.
Comment 1 Tomasz Morawski 2011-10-17 23:36:36 PDT
Created attachment 111391 [details]
Patch
Comment 2 Gyuyoung Kim 2011-10-18 00:28:56 PDT
Comment on attachment 111391 [details]
Patch

View in context: https://bugs.webkit.org/attachment.cgi?id=111391&action=review

> Source/WebKit2/WebProcess/WebCoreSupport/efl/WebErrorsEfl.cpp:27
> +

It seems to me this is unneeded line. According to webkit coding style guideline, there is no an empty line below config.h
http://www.webkit.org/coding/coding-style.html
Comment 3 Tomasz Morawski 2011-10-18 00:46:16 PDT
Created attachment 111403 [details]
Patch 2
Comment 4 Gyuyoung Kim 2011-10-18 01:06:02 PDT
Comment on attachment 111403 [details]
Patch 2

Why do you use <WebCore/ResourceErrror.h>? EFL build script includes WebCore directory as include directory ? It looks other ports use <WebCore/ResourceError.h>

BTW, If this patch is to fix build break, committer can land this patch to fix build break. Could you modify ChangeLog again as below?
For example, *Unreviewd build fix* instead of *Reviewed by NOBODY (OOPS!).* Then, only request cq?, not r?
Comment 5 Gyuyoung Kim 2011-10-18 01:07:07 PDT
(In reply to comment #4)
> (From update of attachment 111403 [details])
> Why do you use <WebCore/ResourceErrror.h>? 

I mean why not you don't use <WebCore/ResourceError.h>.
Comment 6 Tomasz Morawski 2011-10-18 01:17:07 PDT
Created attachment 111407 [details]
Patch 3
Comment 7 Tomasz Morawski 2011-10-18 01:20:42 PDT
> EFL build script includes WebCore directory as include directory ?
> I mean why not you don't use <WebCore/ResourceError.h>.
Yes, it is included and this code can be compiled. But I have changed it to follow other port. Thank you and I am sorry for that.
Comment 8 Tomasz Morawski 2011-10-18 01:26:36 PDT
Created attachment 111409 [details]
Patch 4
Comment 9 WebKit Review Bot 2011-10-18 04:51:43 PDT
Comment on attachment 111409 [details]
Patch 4

Clearing flags on attachment: 111409

Committed r97739: <http://trac.webkit.org/changeset/97739>
Comment 10 WebKit Review Bot 2011-10-18 04:51:48 PDT
All reviewed patches have been landed.  Closing bug.