[EFL][WK2] Fix compilation error by include WebErrors.h file. https://bugs.webkit.org/show_bug.cgi?id=70309

Unreviewed build fix

Added a header file to fix compilation error.

Patch by Tomasz Morawski <t.morawski@samsung.com> on 2011-10-18

* WebProcess/WebCoreSupport/efl/WebErrorsEfl.cpp:

git-svn-id: svn://svn.chromium.org/blink/trunk@97739 bbb929c8-8fbe-4397-9dbb-9b2b20218538